# disaster-tweets-nlp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.dvc/: config
artifacts/: tokenizer.pt
configs/: config.yaml  data.yaml  model.yaml  train.yaml
configs/baseline/: baseline.yaml
configs/mlflow/: mlflow.yaml
data/: raw.dvc
disaster_tweets_nlp/: baseline_training.py  commands.py  training.py
disaster_tweets_nlp/data/: dataset.py  download.py  dvc_manager.py  io.py  preprocessing.py  tokenizer.py
disaster_tweets_nlp/models/: lightning_module.py  text_classifier.py
disaster_tweets_nlp/utils/: git.py
mlartifacts/310407089144634017/65918605ef7b4e898628a564666cf76a/artifacts/: baseline_model.joblib
mlruns/0/: meta.yaml
mlruns/310407089144634017/: meta.yaml
mlruns/310407089144634017/19f1bb15ae3945bd98734ee04a97299f/: meta.yaml
mlruns/310407089144634017/19f1bb15ae3945bd98734ee04a97299f/metrics/: epoch  lr-AdamW
mlruns/310407089144634017/19f1bb15ae3945bd98734ee04a97299f/params/: git_commit_id
mlruns/310407089144634017/19f1bb15ae3945bd98734ee04a97299f/tags/: mlflow.runName
mlruns/310407089144634017/65918605ef7b4e898628a564666cf76a/: meta.yaml
mlruns/310407089144634017/65918605ef7b4e898628a564666cf76a/params/: git_commit_id  lsa  model  vectorizer
mlruns/310407089144634017/7ad1bf16f4554cb6b07ea41381cb73e1/: meta.yaml
mlruns/310407089144634017/c6bc502006584728bf64eac2b13caae5/: meta.yaml
mlruns/310407089144634017/f3bd4d10b69b42d8a7ff25f59774677d/: meta.yaml
(+16 files in other folders)
